--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
             </div>
         </div>
     </main>
-    <footer>
-        &#169;Pepcoding 20k22
+    <footer class="footer_parent">
+        <div class="footer_content">
+             &#169;Pepcoding 20k22</div>
     </footer>
 </body>
 
